appId: com.inovel.app.yemeksepeti
---
- launchApp

# - assertVisible:
#     id: BottomNavigationItem#ACCOUNT

# - tapOn:
#     id: AccountTabSignInHeaderItem

- tapOn: Daha fazla yöntem görüntüle
- tapOn: E-posta
- tapOn:
    id: inputFieldEditText

#yanlış e posta giremiyoruz çünkü devam edilmiyor yanlış girince
- inputText: "experimena445@gmail.com"

- tapOn:
    id: endTextView
# manuel e-posta doğrulama

