appId: com.inovel.app.yemeksepeti
---
- launchApp

# 1. Search barına tıkla ve klavyeyi aç
- tapOn:
    id: "HomeSearchBar" # Buraya Studio'dan aldığın gerçek ID'yi yaz

# 3. Metni yazdır
- inputText: "universite 2"

- tapOn:
    id: AUTOCOMPLETE_SUGGESTION_ENTRY
- tapOn:
    id: IMAGE

- scrollUntilVisible:
    element:
      text: Efsane
- tapOn:
    text: ürün ürününü 1 adet artır
    index: 2
- tapOn: Sepete Git
- tapOn: ürün ürününü 1 adet artır
- tapOn: ürün ürününü 1 adet azalt
- tapOn: ürün ürününü sepetten kaldır
